fixed the home to search and find the users and fixed account attaching a user to account and went in a did css for everything that was complete so far.

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,12 +1,11 @@
+
 .goblinFooter {
-    position: fixed; 
-    bottom: 0; 
-    width: 100%;
-    text-align: center;
+    float: left;
+    position: fixed;
 }
 
 #goblinImage
 {
-    height: 5vh;
+    height: 30vh;
     width: auto;
 }
