--- a/src/components/register/Register.css
+++ b/src/components/register/Register.css
@@ -6,6 +6,30 @@
   
 .register form {
       margin: 0 auto;
-      max-width: 320px;
+      max-width: 520px;
 }
-  
+
+.text{
+    color: rgb(87, 212, 129);
+    text-shadow: 2px 2px rgb(55, 77, 53);
+    text-align: center;
+    padding: 10px;
+}
+
+.textCenter{
+    color: rgb(87, 212, 129);
+    text-shadow: 2px 2px rgb(55, 77, 53);
+    font-size: 54;
+    text-align: center;
+}
+
+.inputField {
+    background-color: rgba(55, 77, 53, 0.726);
+    border-radius: 10px;
+    border: none;
+  }
+
+.btn {
+background-color: rgb(55, 77, 53);
+border: none;
+}
